[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "starcrapstarship"
version = "0.1.0"
[tool.poetry.dependencies]
Complex-Number-Encryptor-Janderion = "^1.0"
bs4 = "^0.0.1"
lxml = "^4.5"
mss = "^5.1"
opencv-python = "^4.2"
poetry = "^1.0"
pyscreenshot = "^2.2"
pytesseract = "^0.3.4"
python = "^3.8"
replit = "^1.1"
termcolor = "^1.1"
[tool.poetry.dev-dependencies]
